--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
-<h2 th:text="${title}" ></h2>
 
+<body>
+<div th:each="entry : ${posts}">
+<h2 th:text="${entry.getTitle()}"></h2>
+</div>
 </body>
 </html>
